--- a/BankApp.MvcUI/Web.config
+++ b/BankApp.MvcUI/Web.config
@@ -77,5 +77,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings><add name="YazilimDb" connectionString="metadata=res://*/Entities.BankDb.csdl|res://*/Entities.BankDb.ssdl|res://*/Entities.BankDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=YazilimBakimi;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="YazilimBakimiEntities" connectionString="metadata=res://*/Entities.Bankmodel.csdl|res://*/Entities.Bankmodel.ssdl|res://*/Entities.Bankmodel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=YazilimBakimi;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    
+    <add name="yazilimbakimiEntities" connectionString="metadata=res://*/Entities.Model1.csdl|res://*/Entities.Model1.ssdl|res://*/Entities.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-5DK8UAL\SQLEXPRESS;initial catalog=yazilimbakimi;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
