--- a/BankApp.MvcUI/BankApp.MvcUI.csproj
+++ b/BankApp.MvcUI/BankApp.MvcUI.csproj
@@ -145,7 +145,6 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\KullaniciController.cs" />
     <Compile Include="Controllers\TransferController.cs" />
-    <Compile Include="Controllers\VirmanController.cs" />
     <Compile Include="Entities\Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -176,7 +175,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="ModelView\Hesaplar.cs" />
     <Compile Include="ModelView\Register.cs" />
+    <Compile Include="ModelView\VirmanViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -415,11 +416,6 @@
     <Content Include="Views\hesap\Index.cshtml" />
     <Content Include="Views\Kullanici\Credate.cshtml" />
     <Content Include="Views\Shared\_IslemLayout.cshtml" />
-    <Content Include="Views\Virman\Create.cshtml" />
-    <Content Include="Views\Virman\Delete.cshtml" />
-    <Content Include="Views\Virman\Details.cshtml" />
-    <Content Include="Views\Virman\Edit.cshtml" />
-    <Content Include="Views\Virman\Index.cshtml" />
     <Content Include="Views\Transfer\Virman.cshtml" />
   </ItemGroup>
   <ItemGroup>
