--- a/BankApp.MvcUI/Web.config
+++ b/BankApp.MvcUI/Web.config
@@ -20,8 +20,10 @@
     <authentication mode="Forms">
       <forms loginUrl="Kullanici/Login"></forms>
     </authentication>
+    <customErrors mode="Off"/>
   </system.web>
   <system.webServer>
+    <httpErrors errorMode="Detailed" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
