--- a/BankApp.MvcUI/Web.config
+++ b/BankApp.MvcUI/Web.config
@@ -20,7 +20,7 @@
     <authentication mode="Forms">
       <forms loginUrl="Kullanici/Login"></forms>
     </authentication>
-    <customErrors mode="Off"/>
+    <customErrors mode="Off" />
   </system.web>
   <system.webServer>
     <httpErrors errorMode="Detailed" />
@@ -80,6 +80,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-  
-  <add name="YazilimBakimiEntities" connectionString="metadata=res://*/Entities.Model1.csdl|res://*/Entities.Model1.ssdl|res://*/Entities.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=YazilimBakimi;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="YazilimBakimiEntities" connectionString="metadata=res://*/Entities.Model1.csdl|res://*/Entities.Model1.ssdl|res://*/Entities.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-5DK8UAL\SQLEXPRESS;initial catalog=yazilimBakimi;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
